Fix #949 - Truncate email address to prevent overlap

--- a/static/scss/partials/dashboard.scss
+++ b/static/scss/partials/dashboard.scss
@@ -5,6 +5,8 @@
 
 .mpp-dashbaord-header-name {
     font-weight: 700;
+    width:100%;
+    word-wrap:break-word;
     span {
         font-weight: 400;
         display: block;
